fixed contact delete and detail show hide / fixed display help numbering on mobile devices / fixed contact user list spaceing

--- a/contacts.css
+++ b/contacts.css
@@ -31,6 +31,7 @@
     padding: 0 24px;
     width: 40%;
     min-width: 350px;
+    max-width: 456px;
     height: calc(100dvh - 80px);
     margin-top: 80px;
     /* Other */
